Video Sequencer Crash on enabling Prefetch frames with Scene strips #70612

Closed
opened 2019-10-07 18:46:11 +02:00 by Lucas Boutrot · 18 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.48

Blender Version
Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-07 14:53, hash: ad84f22628

Short description of error
In the video sequencer, when there a Scene strip, the Prefetch frames toggle crashes Blender when it's turned on.

Exact steps for others to reproduce the error
prefetch_frames_crash.blend

  • Open the file
  • Enable "Prefetch frames"
  • Blender crashes
**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.48 **Blender Version** Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-07 14:53, hash: `ad84f22628` **Short description of error** In the video sequencer, when there a Scene strip, the Prefetch frames toggle crashes Blender when it's turned on. **Exact steps for others to reproduce the error** [prefetch_frames_crash.blend](https://archive.blender.org/developer/F7794969/prefetch_frames_crash.blend) - Open the file - Enable "Prefetch frames" - Blender crashes
Author

Added subscriber: @thornydre

Added subscriber: @thornydre

#74231 was marked as duplicate of this issue

#74231 was marked as duplicate of this issue

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian
Richard Antalik was assigned by ChristopherAnderssarian 2019-10-07 19:26:44 +02:00

Yep, also managed to cause a crash elsewhere when trying to reproduce...
Investigating...

Yep, also managed to cause a crash elsewhere when trying to reproduce... Investigating...

should be high if this is confirmed

should be high if this is confirmed

Added subscriber: @mon

Added subscriber: @mon

Added subscriber: @PierreSchiller

Added subscriber: @PierreSchiller

Added subscriber: @DanielPaul

Added subscriber: @DanielPaul

Added subscriber: @mrlemonyfresh

Added subscriber: @mrlemonyfresh

Still happens as of 2.83 Alpha, 7b8db971d4, 2020-03-02.

This causes an issue for people trying to get around the lack of support for image sequence caching. Playing an image sequence on a texture that is loaded via a scene strip works, but without prefetching frames, is still a drawback.

You'll convert many video co-pilot users if this is fixed.

Still happens as of 2.83 Alpha, 7b8db971d42f, 2020-03-02. This causes an issue for people trying to get around the lack of support for image sequence caching. Playing an image sequence on a texture that is loaded via a scene strip works, but without prefetching frames, is still a drawback. You'll convert many video co-pilot users if this is fixed.

Added subscriber: @xingyzt

Added subscriber: @xingyzt

Still an issue in 2.90 Alpha, 8d8414cd21

Still an issue in 2.90 Alpha, 8d8414cd21a4

D7514, which went into effect in 2.90 542ff416e2 & 2.83 8956e9e5f6, makes it no longer crash immediately after checking Prefetch, but still crashes when I move the playhead around.

~~[D7514](https://archive.blender.org/developer/D7514), which went into effect in 2.90 542ff416e274 & 2.83 8956e9e5f6c0,~~ makes it no longer crash immediately after checking Prefetch, but still crashes when I move the playhead around.
  1. Open the file
  2. Enable "Prefetch frames"
  3. Go to another frame
  4. Blender crashes
1. Open the file 2. Enable "Prefetch frames" 3. Go to another frame 4. Blender crashes

In #70612#929450, @xingyzt wrote:
D7514, which went into effect in 2.90 542ff416e2 & 2.83 8956e9e5f6, makes it no longer crash immediately after checking Prefetch, but still crashes when I move the playhead around.

That patch is still not committed. Will commit today so you will be able to check tomorrow.

> In #70612#929450, @xingyzt wrote: > [D7514](https://archive.blender.org/developer/D7514), which went into effect in 2.90 542ff416e274 & 2.83 8956e9e5f6c0, makes it no longer crash immediately after checking Prefetch, but still crashes when I move the playhead around. That patch is still not committed. Will commit today so you will be able to check tomorrow.

nvm. must be something else that caused it then

nvm. must be something else that caused it then

This issue was referenced by be69f23b68

This issue was referenced by be69f23b687ac0698fb95a28d007ee2e6b1b4eb5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:39:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70612
No description provided.