source/blender/blenkernel/intern/sequencer.c
@@ -1538,7 +1538,10 @@ static bool video_seq_is_rendered(Sequence *seq)
   return (seq && !(seq->flag & SEQ_MUTE) && seq->type != SEQ_TYPE_SOUND_RAM);
 }
 
-static int get_shown_sequences(ListBase *seqbasep, int cfra, int chanshown, Sequence **seq_arr_out)
+int BKE_sequencer_get_shown_sequences(ListBase *seqbasep,
+                                      int cfra,
+                                      int chanshown,
+                                      Sequence **seq_arr_out)
 {
   Sequence *seq_arr[MAXSEQ + 1];
   int b = chanshown;
@@ -3973,7 +3976,7 @@ static ImBuf *seq_render_strip_stack(const SeqRenderData *context,
   ImBuf *out = NULL;
   clock_t begin;
 
-  count = get_shown_sequences(seqbasep, cfra, chanshown, (Sequence **)&seq_arr);
+  count = BKE_sequencer_get_shown_sequences(seqbasep, cfra, chanshown, (Sequence **)&seq_arr);
 
   if (count == 0) {
     return NULL;
@@ -4081,7 +4084,7 @@ ImBuf *BKE_sequencer_give_ibuf(const SeqRenderData *context, float cfra, int cha
   Sequence *seq_arr[MAXSEQ + 1];
   int count;
 
-  count = get_shown_sequences(seqbasep, cfra, chanshown, seq_arr);
+  count = BKE_sequencer_get_shown_sequences(seqbasep, cfra, chanshown, seq_arr);
 
   if (count) {
     out = BKE_sequencer_cache_get(
